# ruberoid

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
asm/: asm_ruberoid.g4
bitreader/: CMakeLists.txt
bitreader/include/ruberoid/bitreader/: bitreader.hpp
bitreader/include/ruberoid/common/: direct_file_reader.hpp  file_reader.hpp  shared_buffer.hpp
bitreader/include/ruberoid/data_source/: file_byte_source.hpp  memory_byte_source.hpp
bitreader/include/ruberoid/runtime/: array.hpp  context.hpp  execution.hpp  execution_context.hpp  field.hpp  instruction.hpp  instruction_registry.hpp  scope_stack.hpp  value.hpp
bitreader/include/ruberoid/runtime/instructions/: baln.hpp  brd.hpp  bskp.hpp  call.hpp  ctxc.hpp  ctxf.hpp  ret.hpp  slota.hpp  slotd.hpp  slote.hpp  slotf.hpp  var.hpp
bitreader/src/: bitreader.cpp  bitreader_gtest.cpp  gtest_common.hpp  memory_byte_source_gtest.cpp
bitreader/src/runtime/: instruction_registry.cpp
bitreader/test/: bitreader_gtest.cpp  file_byte_source_gtest.cpp  memory_byte_source_gtest.cpp  shared_buffer_gtest.cpp
codegen/: CMakeLists.txt
enn1/: CMakeLists.txt
enn1/src/: enn1.cpp
frontend/: asm_ruberoid.g4  h262-seqhdr-example.txt  parser-cli.js  parser.js  pegjs.grammar  result.json  test-grammar.txt
runtime/: CMakeLists.txt
runtime/include/ruberoid/runtime/: context.hpp  execution.hpp  execution_context.hpp  field.hpp  instruction_registry.hpp  program_parser.hpp  scope_stack.hpp
runtime/include/ruberoid/runtime/instructions/: ctxc.hpp  slotf.hpp
runtime/src/: value.cpp
